--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
-:root{
+:root {
   --purple: #7161BA;
   --green: #7FC128;
   --black: #3B3A40;
   --grey: #EEEDF2;
-  --grey_2:#FAFAFA;
+  --grey_2: #FAFAFA;
   --hover: #000000;
   --bgGray: #e5e5e5;
   --bgWhite: #f5f5f7;
   --darkBlue: #4E4693;
+  --white: #FFFFFF
 }
+
 .App {
   text-align: center;
 }
@@ -43,29 +45,33 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
 /* responsive */
-.home-mb{
+.home-mb {
   display: none;
 }
+
 /* Mobile */
-@media only screen and (max-width: 739px){
-  .home-mb{
-        display: none;
-        padding-top: 600px;
-        width: 100vh;
-        height: 1000vh;
-        z-index: 1000;
-        background-color: var(--bg-gray);
+@media only screen and (max-width: 739px) {
+  .home-mb {
+    display: none;
+    padding-top: 600px;
+    width: 100vh;
+    height: 1000vh;
+    z-index: 1000;
+    background-color: var(--bg-gray);
   }
-  .home-mb__title{
-        width: 100%;
-        text-align: center;
-        font-size: 50px;
-        font-weight: bold;
-        color: var(--purple);
+
+  .home-mb__title {
+    width: 100%;
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    color: var(--purple);
   }
 }
