--- a/src/features/Reviews/review.css
+++ b/src/features/Reviews/review.css
@@ -110,7 +110,7 @@
 }
 .input-btn {
     position: absolute;
-    right: 40px;
+    right: 16px;
     top: 50%;
     transform: translateY(-50%);
     display: flex;
@@ -286,6 +286,7 @@
     }
     .org-evaluate__cnt .total-comment {
         padding: 16px 0;
+        font-size: 12px;
     }
     .input-btn {
         right: 16px;
