--- a/src/features/Videos/style.css
+++ b/src/features/Videos/style.css
@@ -13,8 +13,8 @@
     width: 100%;
     height: auto;
     padding: 12px;
-    /* box-shadow: 0 1px 2px rgb(0 0 0 / 20%); */
-    background: rgb(255,255,255);
+    box-shadow: 0 1px 2px rgb(0 0 0 / 20%);
+    background: var(--bg-white);
     border-radius: 8px;
     margin-bottom: 16px;
 }
