--- a/src/features/Trends/style.css
+++ b/src/features/Trends/style.css
@@ -1,13 +1,17 @@
 .trend-ctn{
     padding: 8px 0 12px;
     margin-bottom: 8px;
-    background: rgb(255,255,255);
+    margin-top: 8px;
+    background: var(--bg-white);
+    box-shadow: 0 1px 2px rgb(0 0 0 / 20%);
+    border-radius: 8px;
 }
 .trend-ctn-head{
-    font-family: "Nunito";
     display: flex;
-    flex-direction: row;
     align-items: center;
+    flex-direction: row;
+    font-family: "Nunito";
+    color: var(--purple-text);
     margin: 12px;
     justify-content: space-between;
 }
