[UPDATE] gg map org mobile

--- a/src/features/MerchantDetail/components/OrgMap/orgMap.css
+++ b/src/features/MerchantDetail/components/OrgMap/orgMap.css
@@ -35,6 +35,8 @@
     margin-left: -100%;
     transition: all 0.3s ease-in;
     z-index: 4;
+    border-right: 1px solid #ccc;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .list-org__active {
@@ -124,29 +126,25 @@
     font-size: 14px;
     font-weight: bold;
 }
-.dialog-map__org .open-list__org.open {
+.dialog-map__org .open-list__org {
     z-index: 6;
     position: absolute;
     padding: 16px 8px;
     top: 50%;
     transform: translateY(-50%);
-    left: 0;
     width: max-content;
-    z-index: 3;
     background-color: var(--purple);
-    border-radius: 0 8px 8px 0;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    cursor: pointer;
+    border-radius: 0 8px 8px 0;
+}
+.dialog-map__org .open-list__org.open {
+    left: 0;
+    z-index: 3;
 }
 .dialog-map__org .open-list__org.close {
     z-index: 6;
-    position: absolute;
-    padding: 16px 8px;
-    top: 50%;
-    transform: translateY(-50%);
     right: -23px;
-    border-radius: 0px 8px 8px 0px;
-    background-color: var(--purple);
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 /* cus google map marker */
 
@@ -179,4 +177,106 @@
 }
 .gm-ui-hover-effect {
     display: none !important;
+}
+@media only screen and (max-width: 1023px) {
+    .dialog-map__org {
+        width: 100vw;
+        height: 100vh;
+    }
+    .dialog-map__org .dialog-map__list {
+        display: none;
+    }
+    .dialog-map__org .open-list__org {
+        display: none;
+    }
+    .map-cnt {
+        border-radius: unset;
+    }
+    .map-list__mobile {
+        width: 100%;
+        z-index: 2;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+    .map-cnt .map-item__mobile {
+        width: 100%;
+        background-color: var(--bgWhite);
+        display: flex;
+        flex-direction: row;
+        box-shadow: 0 0 6px 0 rgb(0 0 0 / 34%);
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        border: 1px solid #ccc;
+        border-radius: 12px;
+        align-items: center;
+    }
+    .map-item__mobile .item-img {
+        width: 136px;
+        height: 136px;
+        padding: 12px;
+        flex-shrink: 0;
+    }
+    .map-list__mobile .map-item__wrap {
+        padding: 16px 6px;
+    }
+    .map-item__mobile .item-img img {
+        border-radius: 12px;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        box-shadow: 0 8px 24px rgb(149 157 165 / 20%);
+    }
+    .map-item__mobile .item-content {
+        padding: 12px 12px 12px 0;
+        display: flex;
+        flex-direction: column;
+        gap: 4px 0;
+    }
+    .map-item__mobile .item-content__name p {
+        font-size: 14px;
+        font-weight: bold;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-word;
+        height: 36px;
+    }
+    .map-list__mobile .item-content__address p {
+        font-size: 12px;
+        font-weight: bold;
+        color: #8c8c8c;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-word;
+    }
+    .map-list__mobile .item-content__evaluate {
+        display: flex;
+        grid-gap: 0 8px;
+    }
+    .map-list__mobile .item-content__evaluate .evaluate-item {
+        display: flex;
+        grid-gap: 0 4px;
+    }
+    .map-list__mobile .evaluate-item__img {
+        width: 16px;
+        height: 16px;
+    }
+    .map-list__mobile .evaluate-item__img img {
+        width: 100%;
+        height: 100%;
+    }
+    .dialog-map__org .gm-fullscreen-control {
+        display: none;
+    }
+    .dialog-map__org .gmnoprint {
+        display: none;
+    }
+    .dialog-map__org .dialog-map__close {
+        right: 16px;
+    }
 }
