--- a/src/features/MerchantDetail/components/OrgMap/orgMap.css
+++ b/src/features/MerchantDetail/components/OrgMap/orgMap.css
@@ -29,7 +29,7 @@
     top: 0;
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 25%;
     height: 100%;
     background-color: var(--bgWhite);
     margin-left: -100%;
