--- a/src/features/MerchantDetail/style.css
+++ b/src/features/MerchantDetail/style.css
@@ -877,7 +877,9 @@
         display: flex;
         flex-direction: column;
     }
-
+    .org-time-work__right-list {
+        font-size: 12px;
+    }
     .org-detail {
         padding: 0px;
         height: 296px;
