--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 :root {
-  --purple: #7161BA;
-  --green: #7FC128;
-  --black: #3B3A40;
-  --grey: #EEEDF2;
-  --grey_2: #FAFAFA;
-  --hover: #000000;
-  --bgGray: #e5e5e5;
-  --bgWhite: #f5f5f7;
-  --darkBlue: #4E4693;
-  --white: #FFFFFF;
-  --red_2: #E64D4A;
-  --orange: #FF721F
+    --purple: #7161ba;
+    --green: #7fc128;
+    --black: #3b3a40;
+    --grey: #eeedf2;
+    --grey_2: #fafafa;
+    --hover: #000000;
+    --bgGray: #e5e5e5;
+    --bgWhite: #f5f5f7;
+    --darkBlue: #4e4693;
+    --white: #ffffff;
+    --red_2: #e64d4a;
+    --orange: #ff721f;
 }
 
 .App {
@@ -43,6 +43,12 @@
     color: #61dafb;
 }
 
+.flexX-gap-12 {
+    display: flex;
+    gap: 0 12px;
+    grid-gap: 0 12px;
+    align-items: center;
+}
 .flexX-gap-8 {
     display: flex;
     gap: 0 8px;
