[UPDATE] rating mobile

--- a/src/features/ServiceDetail/serviceDetail.css
+++ b/src/features/ServiceDetail/serviceDetail.css
@@ -119,6 +119,13 @@
     border-radius: 8px;
 }
 
+.service-detail .service-detail__org .service-detail__title {
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 12px;
+}
+
 .service-detail .detail-right__name {
     position: relative;
 }
@@ -534,6 +541,9 @@
     grid-gap: 16px;
     margin-top: 24px;
 }
+.evaluate-rating__mobile {
+    display: none;
+}
 
 @media only screen and (max-width: 1023px) {
     .service-detail {
@@ -928,5 +938,56 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 12px;
+    }
+    .evaluate-rating__mobile {
+        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background: #ffe3d2;
+        border-radius: 8px;
+        padding: 8px;
+    }
+    .org-evaluate__cnt .evaluate-rating {
+        display: none;
+    }
+    .evaluate-rating__mobile .rating-left {
+        display: flex;
+        align-items: center;
+        grid-gap: 0 8px;
+    }
+    .evaluate-rating__mobile .rating-left__total {
+        font-weight: bold;
+        font-size: 30px;
+        line-height: 40px;
+        color: #ff721f;
+    }
+    .evaluate-rating__mobile .rating-left__infor {
+        display: flex;
+        flex-direction: column;
+    }
+    .evaluate-rating__mobile .rating-left__start {
+        width: 50%;
+    }
+    .evaluate-rating__mobile .rating-left__text {
+        font-weight: 500;
+        font-size: 10px;
+        line-height: 12px;
+        color: #1f1f1f;
+    }
+    .evaluate-rating__mobile .rating-right .rating-right__btn {
+        outline: none;
+        border: none;
+        border: 1px solid #ff721f;
+        padding: 8px;
+        border-radius: 8px;
+        overflow: hidden;
+        background-color: transparent;
+    }
+    .evaluate-rating__mobile .rating-right .rating-right__btn p {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        color: #ff721f;
     }
 }
