--- a/src/features/MerchantDetail/style.css
+++ b/src/features/MerchantDetail/style.css
@@ -887,6 +887,9 @@
 }
 
 @media only screen and (max-width: 1023px) {
+    .org-container .MuiTab-root {
+        font-size: 14px;
+    }
     .org-container .org-information-cnt {
         grid-gap: 16px 0;
         padding: 16px 12px;
