--- a/src/features/ServiceDetail/serviceDetail.css
+++ b/src/features/ServiceDetail/serviceDetail.css
@@ -966,9 +966,7 @@
         display: flex;
         flex-direction: column;
     }
-    .evaluate-rating__mobile .rating-left__start {
-        width: 50%;
-    }
+
     .evaluate-rating__mobile .rating-left__text {
         font-weight: 500;
         font-size: 10px;
@@ -979,7 +977,7 @@
         outline: none;
         border: none;
         border: 1px solid #ff721f;
-        padding: 8px;
+        padding: 4px 8px;
         border-radius: 8px;
         overflow: hidden;
         background-color: transparent;
