--- a/src/features/ViewItemCommon/ServicePromoItem/service-promo-item.css
+++ b/src/features/ViewItemCommon/ServicePromoItem/service-promo-item.css
@@ -57,7 +57,7 @@
     margin: -8px 0px 0px -6px;
     clip-path: polygon(100% 0, 100% 61%, 90% 100%, 0 100%, 0 0);
 }
-.ser-pro-item .ser-promo__percent::after{
+.ser-pro-item .ser-promo__percent::after {
     position: absolute;
     content: "";
     width: 20px;
@@ -135,7 +135,7 @@
     font-size: 12px;
     line-height: 18px;
     font-weight: 700;
-    color: var(--text-black);
+    color: grey;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -144,14 +144,14 @@
     word-break: break-word;
 }
 .ser-pro-item .ser-org-address img {
-    width: 20px;
-    height: 20px;
+    width: 14px;
+    height: 14px;
     border-radius: 100%;
-    margin: -1px 8px 0px 0px;
+    margin: 2px 4px 0 0;
 }
 /* Mobile */
 @media only screen and (max-width: 767px) {
-    .ser-pro-item:hover{
+    .ser-pro-item:hover {
         box-shadow: none;
         border: none;
     }
@@ -181,30 +181,30 @@
         width: 14px;
         height: 14px;
     }
-    .ser-pro-item .ser-promo__percent{
+    .ser-pro-item .ser-promo__percent {
         font-size: 10px;
         line-height: 12px;
         width: 68px;
     }
-    .ser-pro-item .ser-promo__percent::after{
+    .ser-pro-item .ser-promo__percent::after {
         margin: 9px 0px 0px 3px;
     }
     /* change style */
-    .ser-pro-item__change{
-       flex-direction: row;
+    .ser-pro-item__change {
+        flex-direction: row;
         justify-content: space-between;
         border: none;
-        background-color: #FFF;
+        background-color: #fff;
     }
-    .ser-img-cnt__change{
+    .ser-img-cnt__change {
         width: 100px;
         height: 100px;
     }
-    .ser-price__change{
+    .ser-price__change {
         flex-direction: row !important;
         align-items: center !important;
     }
-    .ser-img__change{
+    .ser-img__change {
         border-radius: 8px !important;
     }
 }
