--- a/src/features/ReviewsContainer/style.css
+++ b/src/features/ReviewsContainer/style.css
@@ -1,10 +1,17 @@
-.all-review-cnt{
+.all-review-cnt {
     width: 40vw;
-    padding: 12px;
+    padding: 24px;
+}
+.all-review-cnt .total-comment__wrap {
+    margin-top: 24px;
+}
+.all-review-cnt .rating-right {
+    display: none;
 }
 @media only screen and (max-width: 1023px) {
-    .all-review-cnt{
+    .all-review-cnt {
         width: 100vw;
         height: calc(100vh - 54px);
+        padding: 12px;
     }
 }
